membuat indikator loading ("Memuat...") saat aplikasi sedang mengambil data cuaca dari API.  dan Tempat untuk menampilkan hasil pencarian cuaca. Awalnya berisi teks "Hasil akan muncul di sini."

--- a/index.html
+++ b/index.html
@@ -27,3 +27,11 @@
                 Cari
             </button>
         </div>
+        <div id="loading" class="text-center py-2 hidden">
+            <p class="text-gray-500 animate-pulse">Memuat...</p>
+        </div>
+
+        <div id="weatherResult" class="min-h-[100px] border border-gray-200 rounded-lg p-3 space-y-2 text-sm">
+            <p class="text-gray-400 text-center">Hasil akan muncul di sini.</p>
+        </div>
+    </div>
