membuat fungsi displayError(message) digunakan untuk menampilkan pesan error pada halaman web.agar Memberi tahu pengguna jika terjadi kesalahan, seperti kota tidak ditemukan, input kosong, atau gagal mengambil data dari API

--- a/index.html
+++ b/index.html
@@ -61,3 +61,11 @@
             `;
             weatherResult.innerHTML = htmlContent;
         }
+
+        function displayError(message) {
+            weatherResult.innerHTML = `
+                <div class="p-2 bg-red-100 border border-red-400 text-red-700 rounded-md text-center">
+                    <p>${message}</p>
+                </div>
+            `;
+        }
