menambahkan interaksi pengguna untuk mencari cuaca berdasarkan input kota, baik lewat klik tombol maupun tekan Enter, serta menampilkan cuaca default saat halaman dibuka.

--- a/index.html
+++ b/index.html
@@ -98,3 +98,19 @@
                 loadingIndicator.classList.add('hidden');
             }
         }
+
+        searchButton.addEventListener('click', () => {
+            fetchWeather(cityInput.value.trim());
+        });
+
+        cityInput.addEventListener('keypress', (e) => {
+            if (e.key === 'Enter') {
+                fetchWeather(cityInput.value.trim());
+            }
+        });
+        
+        fetchWeather('Yogyakarta'); 
+
+    </script> 
+</body>
+</html>
